package com.smile.template;

/**
 * @author smi1e
 * Date 2019/8/26 10:50
 * Description
 */
public class SaveMoney extends ABSBank {
    @Override
    public void handlingBusiness() {
        System.out.println("正在存钱。。。");
    }

}
